--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3309/db_crm?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3309/java1711crm?characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=root
