--- a/pom.xml
+++ b/pom.xml
@@ -53,13 +53,13 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			<version>${servlet-api.version}</version>
+			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jsp-api</artifactId>
-			<version>${jsp-api.version}</version>
+			<version>2.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- Spring -->
@@ -190,12 +190,12 @@
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
-			<version>${quartz.version}</version>
+			<version>2.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz-jobs</artifactId>
-			<version>${quartz.version}</version>
+			<version>2.2.1</version>
 		</dependency>
 
 		<dependency>
@@ -210,6 +210,11 @@
 		</dependency>
 		<!-- <dependency> <groupId>org.apache.poi</groupId> <artifactId>poi-ooxml-schemas</artifactId> 
 			<version>3.11</version> </dependency> -->
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-core</artifactId>
+			<version>2.3.24</version>
+		</dependency>
 	</dependencies>
 
 	<build>
